--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,6 @@
 {
-    "Mahsulotlar": "Products",
-    "Maxsus Takliflar": "Special Offers",
-    "Bog'lanish": "Contact",
-    "Katalog": "Catalog"
-  }
-  
+  "Mahsulotlar": "Products",
+  "Biz haqimizda": "About Us",
+  "Service": "Service",
+  "Katalog": "Catalog"
+}
