--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,6 @@
 {
-    "Mahsulotlar": "Продукты",
-    "Maxsus Takliflar": "Специальные предложения",
-    "Bog'lanish": "Контакт",
-    "Katalog": "Каталог"
-  }
-  
+  "Mahsulotlar": "Products",
+  "Biz haqimizda": "About Us",
+  "Service": "Service",
+  "Katalog": "Catalog"
+}
