--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1,7 +1,6 @@
 {
-    "Mahsulotlar": "Mahsulotlar",
-    "Maxsus Takliflar": "Maxsus Takliflar",
-    "Bog'lanish": "Bog'lanish",
-    "Katalog": "Katalog"
-  }
-  
+  "Mahsulotlar": "Mahsulotlar",
+  "Biz haqimizda": "Biz haqimizda",
+  "Service": "Xizmat",
+  "Katalog": "Katalog"
+}
